--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "my-pwa-app",
+  "name": "my-app-material-ui-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
+    "@formatjs/intl-relativetimeformat": "^7.3.6",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "base-shell": "^1.2.22",
+    "github-markdown-css": "^4.0.0",
+    "intl": "^1.2.5",
+    "intl-locales-supported": "^1.8.12",
+    "jss-rtl": "^0.3.0",
+    "material-ui-shell": "^1.3.3",
+    "notistack": "^1.0.6",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-easy-crop": "^3.3.3",
+    "react-intl": "^5.17.4",
+    "react-ios-pwa-prompt": "^1.8.4",
+    "react-markdown": "^5.0.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^0.2.4",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
